--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ body {
     padding-top: 20px;
     background-image: url(../img/windows-background.jpg);
     background-size: cover;
+    font-family: 'orbitron';
 
     user-select: none;
 }
@@ -93,8 +94,6 @@ header>* {
     justify-content: center;
     align-items: center;
     font-size: 60px;
-    font-family: 'orbitron';
-
     background-color: black;
     color: red;
 }
@@ -117,8 +116,14 @@ header>* {
     border-right: 5px solid var(--shadow-side);
     border-bottom: 5px solid var(--shadow-side);
     border-left: 5px solid var(--light-side);
-    position: relative;
     cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: bolder;
+    font-size: 35px;
 }
 
 #field>.cell {
